# NES-Emulator

./: Cargo.toml
nes_lib/: Cargo.toml
nes_lib/src/: cpu.rs  error.rs  instructions.rs  lib.rs
resources/test/: test_01.asm  test_01.json
