[package]
name = "nes_lib"
version = "0.1.0"
edition = "2021"
authors = ["Kyle Gagnon"]

[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = { version = "1.0.104" }
thiserror = "1.0.44"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }